tests/baselines/reference/es6ImportDefaultBindingFollowedWithNamespaceBindingDts.errors.txt
tests/cases/compiler/client.ts(1,8): error TS1192: External module '"tests/cases/compiler/server"' has no default export or export assignment.
tests/cases/compiler/client.ts(2,12): error TS4025: Exported variable 'x' has or is using private name 'nameSpaceBinding.a'.


==== tests/cases/compiler/server.ts (0 errors) ====
    
    export class a { }
    
==== tests/cases/compiler/client.ts (2 errors) ====
    import defaultBinding, * as nameSpaceBinding  from "server";
           ~~~~~~~~~~~~~~
!!! error TS1192: External module '"tests/cases/compiler/server"' has no default export or export assignment.
    export var x = new nameSpaceBinding.a();
               ~
!!! error TS4025: Exported variable 'x' has or is using private name 'nameSpaceBinding.a'.